Ajout blocs ROI, Valeur, Urgence et Sticky Bar — optimisation conversion

--- a/index.html
+++ b/index.html
@@ -1015,6 +1015,16 @@ header p {
     <!-- SECTION 1 : HERO -->
     <section class="hero-section">
         <h1 style="font-size: 35px; font-weight: 700; color: #333333; text-align: center; margin-bottom: 20px; margin-top: 0;">Gagnez +3 597€ avant Noël : Le Lot Clé en Main de 370 Bijoux Créateurs à Marge 88%.</h1>
+        <div style="background:#FFF7D9;border:2px solid #D4AF37;padding:18px;border-radius:12px;margin:25px auto;max-width:600px;text-align:center;">
+            <p style="font-size:18px;margin-bottom:8px;">
+                📌 <strong>Rentabilité immédiate :</strong>
+            </p>
+            <p style="font-size:17px;line-height:1.6;">
+                370 bijoux × 12€ prix public conseillé = <strong>4 440€</strong><br>
+                Coût du lot : <strong>480€ TTC</strong><br>
+                ➝ <strong style="color:#D4AF37;font-size:20px;">Profit potentiel : 3 960€</strong>
+            </p>
+        </div>
         
         <p style="font-size: 16px; color: #555555; text-align: center; margin-bottom: 24px; line-height: 1.5;">Lot prêt à vendre pour marchés, boutiques, vide-greniers et pop-ups.</p>
         
@@ -1047,8 +1057,18 @@ header p {
         </div>
     </div>
 
-    <div style="text-align: center; margin: 20px 0;">
-        <a href="https://buy.stripe.com/7sI5ky9li02U6qccMM" class="cta-button">Je sécurise mon lot à 480€ TTC</a>
+    <div style="background:#FFFFFF;border:2px solid #E5E5E5;padding:15px;border-radius:10px;margin:20px auto;max-width:600px;text-align:center;">
+    <p style="font-size:17px;">
+        📦 Valeur si acheté à l’unité :  
+        <strong style="color:#D4AF37;">1 850€</strong>
+    </p>
+</div>
+
+	    <div style="text-align: center; margin: 20px 0;">
+        <p style="font-size:18px;font-weight:700;color:#B80000;text-align:center;margin-top:15px;">
+    🔴 Stock limité : <strong>9 lots restants</strong>
+</p>
+	        <a href="https://buy.stripe.com/7sI5ky9li02U6qccMM" class="cta-button">Je sécurise mon lot à 480€ TTC</a>
     </div>
         <div class="badges" style="margin-bottom: 20px;">
             <span class="badge">✅ Créateurs Français - Les Bijoux de Mimi</span>
@@ -1638,6 +1658,10 @@ header p {
     <div class="whatsapp-bar">
         <a href="https://wa.me/33756923323" class="cta-button">🟢 Contactez-nous par WhatsApp</a>
     </div>
+
+<div style="position:fixed;bottom:0;left:0;width:100%;background:#D4AF37;color:#FFFFFF;padding:12px;text-align:center;font-size:17px;font-weight:700;z-index:9999;box-shadow:0 -5px 20px rgba(0,0,0,0.25);">
+    🔥 Lot 370 bijoux • Prix : <strong>480€ TTC</strong> • Livraison 48-72h
+</div>
 
 </body>
 </html>
