Correction texte, mise à jour stock et remplacement carrousel par image revendeurs

--- a/index.html
+++ b/index.html
@@ -1227,38 +1227,10 @@ header p {
             <p style="font-size: 16px; font-style: italic; margin-bottom: 10px;">"Qualité premium. Mes clients redemandent. Parfait pour la revente."</p>
             <p class="testimonial-author" style="font-size: 14px; font-weight: 600; color: #C9A56B;">— Marc D., Propriétaire de Boutique, Lyon</p>
         </div>
-        <div class="carousel-container-review">
-            <div class="carousel-review">
-                <div class="carousel-slide-review">
-                    <img src="review-collier-eye.jpg" alt="Collier Eye">
-                </div>
-
-                    <img src="review-collier-papillon.jpg" alt="Collier Papillon">
-
-                    <img src="review-collier-chance.jpg" alt="Collier Chance">
-
-                    <img src="review-collier-coccinelle.jpg" alt="Collier Coccinelle">
-
-                    <img src="review-collier-astre.jpg" alt="Collier Astre">
-            <button class="carousel-btn-review prev" onclick="changeSlideReview(-1)">❮</button>
-            <button class="carousel-btn-review next" onclick="changeSlideReview(1)">❯</button>
-        </div>
-            <div class="carousel-dots-review">
-                <span class="dot-review" onclick="currentSlideReview(0)"></span>
-                <span class="dot-review" onclick="currentSlideReview(1)"></span>
-                <span class="dot-review" onclick="currentSlideReview(2)"></span>
-                <span class="dot-review" onclick="currentSlideReview(3)"></span>
-                <span class="dot-review" onclick="currentSlideReview(4)"></span>
-                <span class="dot-review" onclick="currentSlideReview(5)"></span>
-            </div>
-        </div>
-
-        <div class="testimonial">
-            <p style="font-size: 15px; margin-bottom: 8px;">"Bijoux français : retour rapide. J'en ai commandé 2 lots pour Noël."</p>
-            <p class="testimonial-author" style="font-size: 14px;">— Julie R., Nantes</p>
-        </div>
-
         
+        <img src="revendeurs-3-ambiances.jpg" 
+             alt="Ambiances revendeurs — Marché de Noël, Boutique, Live Shopping" 
+             class="bijoux-image">
 
         <div style="text-align: center; margin: 40px 0;">
             <a href="https://buy.stripe.com/7sI5ky9li02U6qccMM" class="cta-button">Acheter maintenant</a>
@@ -1313,12 +1285,12 @@ header p {
     </section>
     <!-- SECTION 7 : URGENCE -->
     <section style="padding: 19px 5% !important;">
-        <h2 style="font-size: 28px;">⏰ STOCKS LIMITu00c9S</h2>
+        <h2 style="font-size: 28px;">⏰ STOCKS LIMITÉS</h2>
         
         <p style="font-size: 15px; color: #555555; margin-top: 8px; margin-bottom: 8px;">
             • Lot unique<br/>
             • Pas de réapprovisionnement avant 2026<br/>
-            • <strong>10-15 lots disponibles</strong>
+            • <strong>9 lots disponibles</strong>
         </p>
 
         <p style="font-size: 15px; font-weight: 600; color: #C9A56B; margin-top: 10px;">
