Ajout bloc preuve sociale WhatsApp sous section revendeurs

--- a/index.html
+++ b/index.html
@@ -1232,6 +1232,17 @@ header p {
              alt="Ambiances revendeurs — Marché de Noël, Boutique, Live Shopping" 
              class="bijoux-image">
 
+        <div class="testimonial" style="text-align:center;">
+            <img src="whatsapp-preuve-sociale.jpg" 
+                 alt="Preuves WhatsApp revendeurs" 
+                 style="border-radius:12px; max-width:460px; width:100%; margin:auto;">
+            <p style="margin-top:12px; font-size:15px; color:#666;">
+                Quelques échanges reçus récemment de revendeurs intéressés par le lot.
+            </p>
+        </div> 
+             alt="Ambiances revendeurs — Marché de Noël, Boutique, Live Shopping" 
+             class="bijoux-image">
+
         <div style="text-align: center; margin: 40px 0;">
             <a href="https://buy.stripe.com/7sI5ky9li02U6qccMM" class="cta-button">Acheter maintenant</a>
         </div>
