--- a/index.html
+++ b/index.html
@@ -1644,5 +1644,23 @@ header p {
     🔥 Lot 370 bijoux • Prix : <strong>480€ TTC</strong> • Livraison 48-72h
 </div>
 
+<script>
+document.querySelectorAll('.faq-item').forEach(item => {
+    const question = item.querySelector('.faq-question');
+    const answer = item.querySelector('.faq-answer');
+
+    // Masquer toutes les réponses au chargement
+    answer.style.display = 'none';
+
+    question.style.cursor = 'pointer';
+    question.addEventListener('click', () => {
+        if (answer.style.display === 'none') {
+            answer.style.display = 'block';
+        } else {
+            answer.style.display = 'none';
+        }
+    });
+});
+</script>
 </body>
 </html>
