Ajout réassurance Solustoc + image expédition commandes

--- a/index.html
+++ b/index.html
@@ -1245,14 +1245,24 @@ header p {
             <a href="https://buy.stripe.com/7sI5ky9li02U6qccMM" class="cta-button">Acheter maintenant</a>
         </div>
 
-        <h3 style="margin-top: 20px; text-align: center;">🏂 Les Bijoux de créateurs Français</h3>
-        <p style="text-align: center; font-size: 15px; color: #555555;">→ SIRET : 943 702 126 00013 | Bassin nantais<br/>
-        → Revendeur : Les Bijoux de Mimi (Arcachon)</p>
-
-        
-    </section>
-
-    <!-- SECTION 6 : FAQ -->
+<h3 style="margin-top: 20px; text-align: center;">🏂 Les Bijoux de créateurs Français</h3>
+	        <p style="text-align: center; font-size: 15px; color: #555555;">→ SIRET : 943 702 126 00013 | Bassin nantais<br/>
+	        → Revendeur : Les Bijoux de Mimi (Arcachon)</p>
+	
+	        <p style="margin-top:15px; font-size:15px; color:#444; line-height:1.6;">
+	            <strong>Solustoc SAS</strong> est une société française déclarée (SIRET 943 702 126 00013), spécialisée dans le déstockage de bijoux créateurs depuis 2024. 
+	            Les lots sont expédiés depuis la région nantaise sous 48h avec facture et numéro de TVA. 
+	            Plus de <strong>30 revendeurs</strong> nous ont déjà fait confiance pour préparer leur approvisionnement de la saison.
+	        </p>
+	
+	        <img src="expedition-lots-solustoc.jpg"
+	             alt="Préparation des commandes — Solustoc"
+	             class="bijoux-image"
+	             style="max-width:700px; margin-top:20px;">
+	
+	    </section>
+	
+	    <!-- SECTION 6 : FAQ -->
     <section>
         <h2>❓ Vos questions, nos réponses</h2>
         
