Ajout bouton WhatsApp dans sticky bar (Stripe conservé)

--- a/index.html
+++ b/index.html
@@ -1652,6 +1652,17 @@ header p {
 
 <div style="position:fixed;bottom:0;left:0;width:100%;background:#D4AF37;color:#FFFFFF;padding:12px;text-align:center;font-size:17px;font-weight:700;z-index:9999;box-shadow:0 -5px 20px rgba(0,0,0,0.25);">
     🔥 Lot 370 bijoux • Prix : <strong>480€ TTC</strong> • Livraison 48-72h
+    <div class="sticky-actions" style="display:flex; gap:10px; margin-top:10px;">
+        <a href="https://buy.stripe.com/7sI5ky9li02U6qccMM"
+           style="flex:1; text-align:center; padding:12px; background:#C9A56B; color:#fff; border-radius:6px; font-weight:600; text-decoration:none;">
+           Commander
+        </a>
+
+        <a href="https://wa.me/33756923323?text=Bonjour%2C%20j%27aimerais%20en%20savoir%20plus%20sur%20le%20lot%20de%20bijoux%20de%20No%C3%ABl"
+           style="flex:1; text-align:center; padding:12px; background:#25D366; color:#fff; border-radius:6px; font-weight:600; text-decoration:none;">
+           WhatsApp
+        </a>
+    </div>
 </div>
 
 <script>
