Ajout page de pré-paiement et mise à jour des CTA Stripe

--- a/index.html
+++ b/index.html
@@ -1068,7 +1068,7 @@ header p {
         <p style="font-size:18px;font-weight:700;color:#B80000;text-align:center;margin-top:15px;">
     🔴 Stock limité : <strong>9 lots restants</strong>
 </p>
-	        <a href="https://buy.stripe.com/7sI5ky9li02U6qccMM" class="cta-button">Je sécurise mon lot à 480€ TTC</a>
+	        <a href="pre-paiement.html" class="cta-button">Je sécurise mon lot à 480€ TTC</a>
     </div>
         <div class="badges" style="margin-bottom: 20px;">
             <span class="badge">✅ Créateurs Français - Les Bijoux de Mimi</span>
@@ -1242,7 +1242,7 @@ header p {
         </div>
 
         <div style="text-align: center; margin: 40px 0;">
-            <a href="https://buy.stripe.com/7sI5ky9li02U6qccMM" class="cta-button">Acheter maintenant</a>
+            <a href="pre-paiement.html" class="cta-button">Acheter maintenant</a>
         </div>
 
 <h3 style="margin-top: 20px; text-align: center;">🏂 Les Bijoux de créateurs Français</h3>
@@ -1299,7 +1299,7 @@ header p {
         <img src="lotbijux1.jpg" alt="Lot complet de bijoux créateurs français" class="bijoux-image" style="margin-top: 40px;">
 
         <div style="text-align: center; margin: 40px 0;">
-            <a href="https://buy.stripe.com/7sI5ky9li02U6qccMM" class="cta-button">Je commande maintenant</a>
+            <a href="pre-paiement.html" class="cta-button">Je commande maintenant</a>
         </div>
     </section>
     <!-- SECTION 7 : URGENCE -->
@@ -1342,7 +1342,7 @@ header p {
             370 bijoux créateurs • Marge 88% • Livraison gratuite
         </p>
         
-        <a href="https://buy.stripe.com/7sI5ky9li02U6qccMM" class="cta-button">
+        <a href="pre-paiement.html" class="cta-button">
             Je commande maintenant
         </a>
         
@@ -1653,7 +1653,7 @@ header p {
 <div style="position:fixed;bottom:0;left:0;width:100%;background:#D4AF37;color:#FFFFFF;padding:12px;text-align:center;font-size:17px;font-weight:700;z-index:9999;box-shadow:0 -5px 20px rgba(0,0,0,0.25);">
     🔥 Lot 370 bijoux • Prix : <strong>480€ TTC</strong> • Livraison 48-72h
     <div class="sticky-actions" style="display:flex; gap:10px; margin-top:10px;">
-        <a href="https://buy.stripe.com/7sI5ky9li02U6qccMM"
+        <a href="pre-paiement.html"
            style="flex:1; text-align:center; padding:12px; background:#C9A56B; color:#fff; border-radius:6px; font-weight:600; text-decoration:none;">
            Commander
         </a>
