Mise à jour image de réassurance dans pre-paiement.html

--- a/pre-paiement.html
+++ b/pre-paiement.html
@@ -50,7 +50,7 @@
         </div>
 
         <div class="image-container">
-            <img src="revendeurs-3-ambiances.jpg" alt="Ambiances revendeurs — Marché de Noël, Boutique, Live Shopping">
+            <img src="expedition-lots-solustoc.jpg" alt="Préparation des commandes — Solustoc">
         </div>
 
         <p class="final-cta-text">
