Ajout blocs réassurance supplémentaires dans pre-paiement.html

--- a/pre-paiement.html
+++ b/pre-paiement.html
@@ -53,6 +53,34 @@
             <img src="expedition-lots-solustoc.jpg" alt="Préparation des commandes — Solustoc">
         </div>
 
+        <!-- Blocs de réassurance supplémentaires -->
+        <div class="testimonial-block" style="background:#FFFFFF;border-left:5px solid #D4AF37;padding:18px;margin:20px 0;border-radius:8px;box-shadow:0 6px 20px rgba(0,0,0,0.08);">
+            <p style="font-family:'Playfair Display',serif;font-size:17px;line-height:1.5;">
+                “J’ai recommandé ce lot à deux collègues, les marges sont vraiment au rendez-vous.”
+                <br><strong>— Marc D., Boutique Lyon</strong>
+            </p>
+        </div>
+
+        <div class="testimonial-block" style="background:#FFFFFF;border-left:5px solid #D4AF37;padding:18px;margin:20px 0;border-radius:8px;box-shadow:0 6px 20px rgba(0,0,0,0.08);">
+            <p style="font-family:'Playfair Display',serif;font-size:17px;line-height:1.5;">
+                “Réassort rapide, qualité très bonne. Je reprends un lot avant Noël.”
+                <br><strong>— Julie R., Nantes</strong>
+            </p>
+        </div>
+
+        <div style="background:#FFF7E2;padding:18px;border-radius:8px;border:1px solid #E8D6A5;margin-top:10px;">
+            <p style="font-size:16px;margin-bottom:8px;"><strong>💬 Derniers messages reçus :</strong></p>
+            <ul style="margin-left:18px;font-size:15px;line-height:1.5;">
+                <li>“Bonjour, est-ce qu’il reste des lots ?”</li>
+                <li>“Je souhaite commander un autre lot, vous pouvez me réserver ?”</li>
+                <li>“La livraison est-elle gratuite ?”</li>
+            </ul>
+
+            <p style="margin-top:10px;font-size:15px;">
+                🚚 <strong>Livraison gratuite et rapide (48-72h)</strong> — expédition immédiate depuis le bassin nantais.
+            </p>
+        </div>
+
         <p class="final-cta-text">
             Cliquez sur le bouton ci-dessous pour finaliser votre commande en toute sécurité.
         </p>
