--- a/pre-paiement.html
+++ b/pre-paiement.html
@@ -56,24 +56,24 @@
         <!-- Blocs de réassurance supplémentaires -->
         <div class="testimonial-block" style="background:#FFFFFF;border-left:5px solid #D4AF37;padding:18px;margin:20px 0;border-radius:8px;box-shadow:0 6px 20px rgba(0,0,0,0.08);">
             <p style="font-family:'Playfair Display',serif;font-size:17px;line-height:1.5;">
-                “J’ai recommandé ce lot à deux collègues, les marges sont vraiment au rendez-vous.”
-                <br><strong>— Marc D., Boutique Lyon</strong>
+                “Bonne qualité, présentation impeccable. J’ai vendu les premiers bijoux dès le week-end suivant.”
+                <br><strong>— Claire M., Boutique à Toulouse</strong>
             </p>
         </div>
 
         <div class="testimonial-block" style="background:#FFFFFF;border-left:5px solid #D4AF37;padding:18px;margin:20px 0;border-radius:8px;box-shadow:0 6px 20px rgba(0,0,0,0.08);">
             <p style="font-family:'Playfair Display',serif;font-size:17px;line-height:1.5;">
-                “Réassort rapide, qualité très bonne. Je reprends un lot avant Noël.”
-                <br><strong>— Julie R., Nantes</strong>
+                “Lot conforme, envoi rapide. Je recommande pour les marchés de Noël, marges intéressantes.”
+                <br><strong>— Antoine P., Artisan créateur — Dijon</strong>
             </p>
         </div>
 
         <div style="background:#FFF7E2;padding:18px;border-radius:8px;border:1px solid #E8D6A5;margin-top:10px;">
             <p style="font-size:16px;margin-bottom:8px;"><strong>💬 Derniers messages reçus :</strong></p>
             <ul style="margin-left:18px;font-size:15px;line-height:1.5;">
-                <li>“Bonjour, est-ce qu’il reste des lots ?”</li>
-                <li>“Je souhaite commander un autre lot, vous pouvez me réserver ?”</li>
-                <li>“La livraison est-elle gratuite ?”</li>
+                <li>“Bonjour, je voudrais vérifier : la facture est bien fournie avec le lot ?”</li>
+                <li>“Est-ce que je peux recevoir le colis avant le week-end ?”</li>
+                <li>“Vous expédiez depuis la France métropolitaine, c’est bien ça ?”</li>
             </ul>
 
             <p style="margin-top:10px;font-size:15px;">
