--- a/index.html
+++ b/index.html
@@ -985,6 +985,39 @@ header p {
             display: block; /* Show on mobile */
         }
     }
+/* ============================================
+   LIGHTBOX ZOOM
+   ============================================ */
+.lightbox {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 10000;
+    cursor: pointer;
+}
+
+.lightbox-content {
+    max-width: 90%;
+    max-height: 90%;
+    transition: transform 0.3s ease-out;
+}
+
+.lightbox-content img {
+    display: block;
+    width: auto;
+    max-width: 100%;
+    max-height: 100vh;
+    box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
+    border-radius: 5px;
+    margin: 0;
+}
+
     </style>
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -1683,5 +1716,33 @@ document.querySelectorAll('.faq-item').forEach(item => {
     });
 });
 </script>
+<div id="lightbox" class="lightbox"><img id="lightbox-img" class="lightbox-content"></div>
+
+<script>
+document.addEventListener('DOMContentLoaded', () => {
+    const images = document.querySelectorAll('img');
+    const lightbox = document.getElementById('lightbox');
+    const lightboxImg = document.getElementById('lightbox-img');
+
+    images.forEach(image => {
+        // Exclure les images du header et les icônes
+        if (image.closest('header') || image.src.includes('.svg') || image.src.includes('IgRkRpoPzJkHREbL.png')) {
+            return;
+        }
+
+        image.style.cursor = 'zoom-in';
+        image.addEventListener('click', (e) => {
+            e.stopPropagation();
+            lightbox.style.display = 'flex';
+            lightboxImg.src = image.src;
+        });
+    });
+
+    lightbox.addEventListener('click', () => {
+        lightbox.style.display = 'none';
+    });
+});
+</script>
+
 </body>
 </html>
