Correction H1, Valeur de Référence et Email de Contact

--- a/index.html
+++ b/index.html
@@ -1066,7 +1066,7 @@ header p {
 
     <!-- SECTION 1 : HERO -->
     <section class="hero-section">
-        <h1 style="font-size: 35px; font-weight: 700; color: #333333; text-align: center; margin-bottom: 20px; margin-top: 0;">Gagnez +3 597€ avant Noël : Le Lot Clé en Main de 370 Bijoux Créateurs à Marge 88%.</h1>
+        <h1 style="font-size: 35px; font-weight: 700; color: #333333; text-align: center; margin-bottom: 20px; margin-top: 0;">Gagnez +3 960€ avant Noël : Le Lot Clé en Main de 370 Bijoux Créateurs à Marge 88%.</h1>
         <div style="background:#FFF7D9;border:2px solid #D4AF37;padding:18px;border-radius:12px;margin:25px auto;max-width:600px;text-align:center;">
             <p style="font-size:18px;margin-bottom:8px;">
                 📌 <strong>Rentabilité immédiate :</strong>
@@ -1111,7 +1111,7 @@ header p {
 
     <div style="background:#FFFFFF;border:2px solid #E5E5E5;padding:15px;border-radius:10px;margin:20px auto;max-width:600px;text-align:center;">
     <p style="font-size:17px;">
-        📦 Valeur si acheté à l’unité :  
+        📦 Valeur Catalogue Grossiste :  
         <strong style="color:#D4AF37;">1 850€</strong>
     </p>
 </div>
@@ -1410,7 +1410,7 @@ header p {
             <a id="cta-whatsapp-b2b" href="https://wa.me/33756923323?text=Bonjour%2C%20j%27aimerais%20en%20savoir%20plus%20sur%20le%20lot%20de%20bijoux%20de%20No%C3%ABl" class="cta-button" style="max-width: 200px; text-decoration: none;">
                 📤 WhatsApp
             </a>
-            <a href="mailto:contact@lesbijouxfrancais.fr?subject=Demande%20d%27information%20-%20Lot%20Bijoux%20No%C3%ABl" class="cta-button" style="max-width: 200px; text-decoration: none;">
+            <a href="mailto:contact@solustoc.com?subject=Demande%20d%27information%20-%20Lot%20Bijoux%20No%C3%ABl" class="cta-button" style="max-width: 200px; text-decoration: none;">
                 ✏️ Email
             </a>
         </div>
@@ -1426,7 +1426,7 @@ header p {
         
         <div style="margin: 30px 0; border-top: 1px solid rgba(255,255,255,0.2); padding-top: 20px;">
             <p><strong>CONTACT</strong></p>
-            <p>📧 contact@lesbijouxfrancais.fr</p>
+            <p>📧 contact@solustoc.com</p>
             <p>📍 69 Bis Rue du Bêle, 44300 Nantes</p>
         </div>
 
