Ajout bloc alerte raison du prix (déstockage)

--- a/index.html
+++ b/index.html
@@ -1067,6 +1067,9 @@ header p {
     <!-- SECTION 1 : HERO -->
     <section class="hero-section">
         <h1 style="font-size: 35px; font-weight: 700; color: #333333; text-align: center; margin-bottom: 20px; margin-top: 0;">Gagnez +3 960€ avant Noël : Le Lot Clé en Main de 370 Bijoux Créateurs à Marge 88%.</h1>
+<div style='background-color: #fff3cd; color: #856404; padding: 10px; border: 1px solid #ffeeba; border-radius: 5px; margin: 15px 0; font-weight: bold; font-size: 0.9em; text-align: center;'>
+⚠️ RAISON DU PRIX : Déstockage logistique avant inventaire 2026.<br>Nous libérons l'espace, vous récupérez la marge.
+</div>
         <div style="background:#FFF7D9;border:2px solid #D4AF37;padding:18px;border-radius:12px;margin:25px auto;max-width:600px;text-align:center;">
             <p style="font-size:18px;margin-bottom:8px;">
                 📌 <strong>Rentabilité immédiate :</strong>
