Renforcement de l'urgence (Stock Critique)

--- a/index.html
+++ b/index.html
@@ -1121,7 +1121,7 @@ header p {
 
 	    <div style="text-align: center; margin: 20px 0;">
         <p style="font-size:18px;font-weight:700;color:#B80000;text-align:center;margin-top:15px;">
-    🔴 Stock limité : <strong>9 lots restants</strong>
+    🔥 STOCK CRITIQUE : SEULEMENT 9 LOTS RESTANTS (Mise à jour en temps réel)
 </p>
 	        <a href="pre-paiement.html" class="cta-button">Je sécurise mon lot à 480€ TTC</a>
     </div>
@@ -1359,7 +1359,7 @@ header p {
     </section>
     <!-- SECTION 7 : URGENCE -->
     <section style="padding: 19px 5% !important;">
-        <h2 style="font-size: 28px;">⏰ STOCKS LIMITÉS</h2>
+        <h2 style="font-size: 28px;">🔴 STOCK CRITIQUE : CE LOT EST UNIQUE</h2>
         
         <p style="font-size: 15px; color: #555555; margin-top: 8px; margin-bottom: 8px;">
             • Lot unique<br/>
